rough .js/onclick

--- a/index.html
+++ b/index.html
@@ -38,29 +38,29 @@
 
         <section>
             <table class="gameboard">
+                <tr class="row0">
+                    <td class="col0" id="cell0"></td>
+                    <td class="col1" id="cell1"></td>
+                    <td class="col2" id="cell2"></td>
+                    <td class="col3" id="cell3"></td>
+                </tr>
                 <tr class="row1">
-                    <td class="col1"></td>
-                    <td class="col2"></td>
-                    <td class="col3"></td>
-                    <td class="col4"></td>
+                    <td class="col0" id="cell4"></td>
+                    <td class="col1" id="cell5"></td>
+                    <td class="col2" id="cell6"></td>
+                    <td class="col3" id="cell7"></td>
                 </tr>
                 <tr class="row2">
-                    <td class="col1"></td>
-                    <td class="col2"></td>
-                    <td class="col3"></td>
-                    <td class="col4"></td>
+                    <td class="col0" id="cell8"></td>
+                    <td class="col1" id="cell9"></td>
+                    <td class="col2" id="cell10"></td>
+                    <td class="col3" id="cell11"></td>
                 </tr>
                 <tr class="row3">
-                    <td class="col1"></td>
-                    <td class="col2"></td>
-                    <td class="col3"></td>
-                    <td class="col4"></td>
-                </tr>
-                <tr class="row4">
-                    <td class="col1"></td>
-                    <td class="col2"></td>
-                    <td class="col3"></td>
-                    <td class="col4"></td>
+                    <td class="col0" id="cell12"></td>
+                    <td class="col1" id="cell13"></td>
+                    <td class="col2" id="cell14"></td>
+                    <td class="col3" id="cell15"></td>
                 </tr>
 
 
