--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Life in Javascript</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,15 +25,15 @@
         <!-- Add your site or application content here -->
 
         <header>
-
-
-            <div id="hud">
-                <div id="start_end_button">start/end game</div>
-                <div id="number_of_turns">number of turns</div>
-                <div id="number_of_matches">number of matches</div>
-            </div>
-
+            <h3>David Attenborough's Life in Javascript</h3>
         </header>
+
+        <nav id="hud">
+            <div id="start_end_button">start/end game</div>
+            <div id="number_of_turns">number of turns</div>
+            <div id="number_of_matches">number of matches</div>
+        </nav>
+
 
 
         <section>
