images and styling

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <!-- Add your site or application content here -->
 
         <header>
-            <h1>Memory Game</h1>
+            <h1>Memory <Game></Game></h1>
         </header>
 
         <nav id="hud">
-            <div id="start_end_button">start/end game</div>
-            <div id="number_of_turns">number of turns</div>
-            <div id="number_of_matches">number of matches</div>
+            <div id="start_end_button">start game</div>
+            <div id="number_of_turns">turns: </div>
+            <div id="number_of_matches">matches: </div>
         </nav>
 
 
@@ -73,7 +73,7 @@
         <footer>
             <h4>COMP-1911 Edward Lambke A00892244</h4>
 
-            <h2>Memory Game</h2>
+            <h1><a href="doc/jw1_p_01.pdf">Memory Game</a></h1>
         </footer>
 
 
