--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         <nav id="hud">
             <div id="start_end_button">start game</div>
-            <div id="number_of_turns">turns: </div>
-            <div id="number_of_matches">matches: </div>
+            <div>turns: <span id="number_of_turns"></span></div>
+            <div>matches: <span id="number_of_matches"></span></div>
         </nav>
 
 
