--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!--script src="js/vendor/modernizr-2.6.2.min.js"></script-->
     </head>
     <body>
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -28,10 +29,12 @@
             <h1>Memory <Game></Game></h1>
         </header>
 
+        <div id="container">
+
         <nav id="hud">
             <div id="start_end_button">start game</div>
-            <div>turns: <span id="number_of_turns"></span></div>
-            <div>matches: <span id="number_of_matches"></span></div>
+            <div>turns: <span id="number_of_turns">0</span></div>
+            <div>matches: <span id="number_of_matches">0</span></div>
         </nav>
 
 
@@ -70,11 +73,14 @@
 
         </section>
 
+    </div>
+
         <footer>
             <h4>COMP-1911 Edward Lambke A00892244</h4>
 
             <h1><a href="doc/jw1_p_01.pdf">Memory Game</a></h1>
         </footer>
+
 
 
 
