--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
         <footer>
             <h4>COMP-1911 Edward Lambke A00892244</h4>
 
-            <h1><a href="doc/jw1_p_01.pdf">Memory Game</a></h1>
+            <h2><a>Matching Game</a></h2>
+
+            <h5><a  href="doc/jw1_p_01.pdf">project requirements</a></h5>
+            <h5><a  href="doc/readme.html">read me!</a></h5>
         </footer>
 
 
