--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <footer>
             <h4>COMP-1911 Edward Lambke A00892244</h4>
 
-            <h2><a>Matching Game</a></h2>
+            <h2>Matching Game</h2>
 
             <h5><a  href="doc/jw1_p_01.pdf">project requirements</a></h5>
             <h5><a  href="doc/readme.html">read me!</a></h5>
@@ -88,10 +88,8 @@
 
 
 
-        <!--script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script-->
-        <script src="js/main.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="./js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <!--script>
